5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1671_1105.log
== SUBMITION (2019-04-27 14:09:12) 
-- CODE:
brasao=input("brasao").lower()
print("Entrada:", brasao)

if(brasao=="lobo")
  print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado")
   print("Casa: Baratheon")
elif(brasao=="dragao")
   print("Casa: Targaryen")
elif(brasao=="rosa")
   print("Casa: Tyrell")
elif(brasao=="sol")
   print("Casa: Martell")
elif(brasao=="Lula")
   print("Casa: Greyjoy")
elif(brasao=="Esfolado")
   print("Casa: Bolton")
elif(brasao=="turta")
   print("Casa: Tully")
else:
	print("Brasao invalido")
	
	
	
	
		
-- EXECUTION TIME:
0.138541
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 4
    if(brasao=="lobo")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:09:26) 
-- CODE:
brasao=input("brasao").lower()
print("Entrada:", brasao)

if(brasao=="lobo")
  print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado")
   print("Casa: Baratheon")
elif(brasao=="dragao")
   print("Casa: Targaryen")
elif(brasao=="rosa")
   print("Casa: Tyrell")
elif(brasao=="sol")
   print("Casa: Martell")
elif(brasao=="lula")
   print("Casa: Greyjoy")
elif(brasao=="Esfolado")
   print("Casa: Bolton")
elif(brasao=="turta")
   print("Casa: Tully")
else:
	print("Brasao invalido")
	
	
	
	
		
-- EXECUTION TIME:
0.172867
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 4
    if(brasao=="lobo")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:10:16) 
-- CODE:
brasao=input("brasao").lower()
print("Entrada:", brasao)

if(brasao=="lobo"):
  print("Casa: Stark")
elif(brasao=="leao"):
	print("Casa: Lannister")
elif(brasao=="veado"):
   print("Casa: Baratheon")
elif(brasao=="dragao"):
   print("Casa: Targaryen")
elif(brasao=="rosa"):
   print("Casa: Tyrell")
elif(brasao=="sol"):
   print("Casa: Martell")
elif(brasao=="lula"):
   print("Casa: Greyjoy")
elif(brasao=="Esfolado"):
   print("Casa: Bolton")
elif(brasao=="turta"):
   print("Casa: Tully")
else:
	print("Brasao invalido")
	
	
	
	
		
-- EXECUTION TIME:
0.20832
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
